--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,8 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".pages.RegisterActivity"
-    tools:ignore="MissingDefaultResource">
+    tools:context=".pages.activity.RegisterActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
