--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -15,7 +15,7 @@
         android:layout_marginTop="16dp"
         android:contentDescription="@null"
         android:padding="8dp"
-        android:src="@drawable/user" />
+        app:srcCompat="@drawable/user" />
 
     <LinearLayout
         android:layout_width="match_parent"
