--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".pages.fragment.MeFragment">
@@ -17,16 +17,17 @@
         android:background="@color/colorPrimary"
         android:orientation="horizontal">
 
-        <ImageView
+        <tty.community.widget.RoundAngleImageView
             android:id="@+id/me_portrait"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:padding="4dp"
             android:scaleType="fitXY"
-            android:src="@drawable/user"
+            app:roundHeight="12dp"
+            app:roundWidth="12dp"
+            app:srcCompat="@drawable/ic_launcher_background"
             android:contentDescription="@null"/>
 
         <LinearLayout
