--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,11 +7,17 @@
     android:padding="16dp"
     tools:context=".pages.activity.RegisterActivity">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="48sp"
+        android:text="TTY Community\nJoin Us!"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_gravity="center"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="64dp"
         android:background="@drawable/border"
         android:orientation="horizontal">
 
@@ -47,6 +53,8 @@
             android:textSize="20sp" />
     </LinearLayout>
 
+    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/register_nickname_info"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
@@ -76,9 +84,8 @@
             android:layout_margin="2dp"
             android:layout_marginStart="16dp"
             android:background="#00ffffff"
-            android:importantForAutofill="no"
             android:inputType="textEmailAddress"
-            android:hint="请尽量输入有效的邮箱"
+            android:hint="输入有效的邮箱"
             android:maxLines="1"
             android:paddingLeft="8dp"
             android:paddingTop="4dp"
@@ -86,6 +93,8 @@
             android:paddingBottom="4dp"
             android:textSize="20sp" />
     </LinearLayout>
+
+    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/register_email_info"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -117,7 +126,6 @@
             android:layout_marginStart="16dp"
             android:background="#00ffffff"
             android:hint="6~20个字符"
-            android:importantForAutofill="no"
             android:inputType="textPassword"
             android:maxLines="1"
             android:paddingLeft="8dp"
@@ -156,7 +164,7 @@
             android:layout_margin="2dp"
             android:layout_marginStart="16dp"
             android:background="#00ffffff"
-            android:importantForAutofill="no"
+            android:hint="再次确认你的密码"
             android:inputType="textPassword"
             android:maxLines="1"
             android:paddingLeft="8dp"
@@ -166,6 +174,7 @@
             android:textSize="20sp" />
     </LinearLayout>
 
+    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/register_password_info"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
