--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -19,8 +19,8 @@
 
         <tty.community.widget.RoundAngleImageView
             android:id="@+id/me_portrait"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
@@ -32,7 +32,7 @@
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="80dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_gravity="center_vertical"
             android:orientation="vertical">
@@ -40,7 +40,7 @@
             <TextView
                 android:id="@+id/me_nickname"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:ellipsize="end"
                 android:gravity="center_vertical"
@@ -53,9 +53,10 @@
             <TextView
                 android:id="@+id/me_id"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:ellipsize="end"
+                android:layout_marginTop="8dp"
                 android:gravity="center_vertical"
                 android:singleLine="true"
                 android:text="ID : null"
