--- a/app/src/main/res/layout/fragment_create_blog_short.xml
+++ b/app/src/main/res/layout/fragment_create_blog_short.xml
@@ -11,6 +11,7 @@
         android:layout_margin="8dp"
         android:inputType="textMultiLine"
         android:hint="在这里输入..."
+        android:padding="8dp"
         android:gravity="top"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
