--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -1,104 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".pages.fragment.MeFragment">
-
-
-    <LinearLayout
-        android:id="@+id/me_detail"
+    <com.scwang.smartrefresh.layout.SmartRefreshLayout
+        android:id="@+id/me_fragment_refresh"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="16dp"
-        android:paddingBottom="16dp"
-        android:layout_alignParentTop="true"
-        android:background="@color/colorPrimary"
-        android:orientation="horizontal">
+        android:layout_height="match_parent">
+        <com.scwang.smartrefresh.header.PhoenixHeader
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
-        <tty.community.widget.RoundAngleImageView
-            android:id="@+id/me_portrait"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:scaleType="fitXY"
-            app:roundHeight="8dp"
-            app:roundWidth="8dp"
-            app:srcCompat="@drawable/ic_launcher_background"
-            android:contentDescription="@null"/>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_gravity="center_vertical"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/me_nickname"
+        <RelativeLayout
+                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:ellipsize="end"
-                android:gravity="center_vertical"
-                android:singleLine="true"
-                android:text="Hi, 请登录"
-                android:textColor="@color/white"
-                android:textSize="24sp"
-                android:textStyle="bold" />
+                android:layout_height="match_parent">
+                <LinearLayout
+                    android:id="@+id/me_detail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="16dp"
+                    android:paddingBottom="16dp"
+                    android:layout_alignParentTop="true"
+                    android:background="@color/colorPrimary"
+                    android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/me_id"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:ellipsize="end"
-                android:layout_marginTop="8dp"
-                android:gravity="center_vertical"
-                android:singleLine="true"
-                android:text="ID : null"
-                android:textColor="@color/white"
-                android:textSize="18sp" />
-        </LinearLayout>
+                    <tty.community.widget.RoundAngleImageView
+                        android:id="@+id/me_portrait"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginRight="16dp"
+                        android:scaleType="fitXY"
+                        app:roundHeight="8dp"
+                        app:roundWidth="8dp"
+                        android:contentDescription="@null"/>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginEnd="20dp"
-            android:orientation="vertical">
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_gravity="center_vertical"
+                        android:orientation="vertical">
 
-            <Button
-                android:id="@+id/me_more"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:background="@drawable/ic_more" />
-        </LinearLayout>
+                        <TextView
+                            android:id="@+id/me_nickname"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:ellipsize="end"
+                            android:gravity="center_vertical"
+                            android:singleLine="true"
+                            android:text="Hi, 请登录"
+                            android:textColor="@color/white"
+                            android:textSize="24sp"
+                            android:textStyle="bold" />
 
-    </LinearLayout>
+                        <TextView
+                            android:id="@+id/me_id"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:ellipsize="end"
+                            android:layout_marginTop="8dp"
+                            android:gravity="center_vertical"
+                            android:singleLine="true"
+                            android:text="ID : null"
+                            android:textColor="@color/white"
+                            android:textSize="18sp" />
+                    </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="360dp"
-        android:layout_above="@id/me_login"
-        android:layout_below="@+id/me_detail"
-        android:orientation="vertical">
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginEnd="20dp"
+                        android:orientation="vertical">
+
+                        <Button
+                            android:id="@+id/me_more"
+                            android:layout_width="32dp"
+                            android:layout_height="32dp"
+                            android:background="@drawable/ic_more" />
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="360dp"
+                    android:layout_above="@id/me_login"
+                    android:layout_below="@+id/me_detail"
+                    android:orientation="vertical">
 
 
-    </LinearLayout>
+                </LinearLayout>
 
-    <Button
-        android:id="@+id/me_login"
-        style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_width="match_parent"
-        android:layout_height="42dp"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="16dp"
-        android:background="@drawable/border"
-        android:text="登录/切换账号"
-        android:textColor="@color/black"
-        android:textSize="20sp" />
+                <Button
+                    android:id="@+id/me_login"
+                    style="@style/Widget.AppCompat.Button.Borderless"
+                    android:layout_width="match_parent"
+                    android:layout_height="42dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_margin="16dp"
+                    android:background="@drawable/border"
+                    android:text="登录/切换账号"
+                    android:textColor="@color/black"
+                    android:textSize="20sp" />
+        </RelativeLayout>
+
+    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
+
 
 </RelativeLayout>
