--- a/app/src/main/res/layout/activity_user_detail.xml
+++ b/app/src/main/res/layout/activity_user_detail.xml
@@ -1,16 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.scwang.smartrefresh.layout.SmartRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:padding="8dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/user_detail_refresh"
     tools:context=".pages.activity.UserDetailActivity">
+
+    <com.scwang.smartrefresh.header.PhoenixHeader
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
     <LinearLayout
         android:orientation="vertical"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="64dp"
@@ -39,14 +46,13 @@
                 android:layout_width="64dp"
                 android:layout_height="64dp"
                 android:layout_alignParentEnd="true"
-                android:padding="8sp"
-                app:srcCompat="@drawable/user" />
+                android:padding="8sp" />
         </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:background="@drawable/border"
             android:orientation="horizontal">
 
@@ -56,8 +62,8 @@
                 android:gravity="center"
                 android:paddingLeft="8dp"
                 android:paddingRight="8dp"
-                android:text="用户ID"
-                android:textSize="20sp" />
+                android:text="用 户 ID"
+                android:textSize="19sp" />
 
             <View
                 android:layout_width="1dp"
@@ -80,7 +86,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:background="@drawable/border"
             android:orientation="horizontal">
 
@@ -114,7 +120,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:background="@drawable/border"
             android:orientation="horizontal">
 
@@ -148,7 +154,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:background="@drawable/border"
             android:orientation="horizontal">
 
@@ -182,7 +188,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:background="@drawable/border"
             android:orientation="horizontal">
 
@@ -193,7 +199,7 @@
                 android:paddingLeft="8dp"
                 android:paddingRight="8dp"
                 android:text="经     验"
-                android:textSize="20dp" />
+                android:textSize="20sp" />
 
             <View
                 android:layout_width="1dp"
@@ -213,15 +219,49 @@
                 android:textSize="20sp" />
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/border"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="96dp"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                android:text="用 户 组"
+                android:textSize="19sp" />
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:background="#999999" />
+
+            <TextView
+                android:id="@+id/user_detail_user_group"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:ellipsize="end"
+                android:gravity="center_vertical|end"
+                android:maxLines="1"
+                android:paddingEnd="8dp"
+                android:text="请登录账号"
+                android:textIsSelectable="true"
+                android:textSize="20sp" />
+        </LinearLayout>
+
         <Button
             android:id="@+id/user_detail_change_password"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_marginTop="48dp"
+            android:layout_marginTop="64dp"
             android:background="@drawable/border"
             android:text="修改密码"
             android:layout_marginBottom="16dp"
             android:textSize="18sp" />
     </LinearLayout>
 
-</ScrollView>
+</com.scwang.smartrefresh.layout.SmartRefreshLayout>
