--- a/app/src/main/res/layout/fragment_square.xml
+++ b/app/src/main/res/layout/fragment_square.xml
@@ -5,25 +5,28 @@
                 android:layout_height="match_parent"
                 tools:context=".pages.fragment.SquareFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="36dp"
-        android:id="@+id/square_tag_tab"/>
-
-
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:id="@+id/square_refreshLayout"
         android:layout_width="match_parent"
-        android:layout_below="@id/square_tag_tab"
         android:layout_height="match_parent">
-        <com.scwang.smartrefresh.header.WaterDropHeader
+        <com.scwang.smartrefresh.header.PhoenixHeader
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
-        <androidx.recyclerview.widget.RecyclerView
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/square_blog_list"/>
-        <com.scwang.smartrefresh.layout.footer.BallPulseFooter
+            android:layout_height="match_parent">
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="36dp"
+                android:id="@+id/square_tag_tab"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/square_blog_list"/>
+        </LinearLayout>
+
+        <com.scwang.smartrefresh.layout.footer.ClassicsFooter
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </com.scwang.smartrefresh.layout.SmartRefreshLayout>
