--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="colorPrimaryLight">#A5D6A7</color>
     <color name="transparent">#00ffffff</color>
     <color name="white">#ffffff</color>
+    <color name="grey">#bbbbbb</color>
 </resources>
