--- a/app/src/main/res/menu/nav_main.xml
+++ b/app/src/main/res/menu/nav_main.xml
@@ -1,19 +1,18 @@
-<menu xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/ic_home_grey_64dp"
         android:id="@+id/nav_home"
-        android:title="HOME"
+        android:title="主页"
         app:showAsAction="ifRoom"/>
     <item
-        android:icon="@drawable/chat"
-        android:id="@+id/nav_square"
-        android:title="SQUARE"
+        android:id="@+id/nav_chat"
+        android:title="私信"
+        android:icon="@drawable/ic_chat_grey_64dp"
         app:showAsAction="ifRoom"/>
     <item
-        android:icon="@drawable/user"
+        android:icon="@drawable/ic_user_grey_64dp"
         android:id="@+id/nav_me"
-        android:title="ME"
+        android:title="我的"
         app:showAsAction="ifRoom"/>
 </menu>
