--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="transparent">#00ffffff</color>
     <color name="white">#ffffff</color>
     <color name="grey">#bbbbbb</color>
+    <color name="light_grey">#e8e8e8</color>
 </resources>
