--- a/app/src/main/res/layout/item_blog_outline.xml
+++ b/app/src/main/res/layout/item_blog_outline.xml
@@ -1,76 +1,209 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/blog_outline_card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardElevation="4dp"
-    app:cardCornerRadius="8dp"
-    android:layout_margin="8dp"
-    android:orientation="vertical">
+    android:descendantFocusability="blocksDescendants"
+    android:orientation="vertical"
+    app:cardElevation="2dp">
+
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:background="@color/white"
         android:orientation="vertical"
-        android:padding="4dp"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textSize="24sp"
-            android:id="@+id/blog_title"/>
+        android:padding="4dp">
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:orientation="horizontal">
+
             <tty.community.widget.RoundAngleImageView
                 android:id="@+id/blog_author_portrait"
-                android:layout_width="36dp"
-                android:layout_height="36dp"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center_vertical"
-                android:textSize="20sp"
-                android:id="@+id/blog_author_nickname"/>
+                android:layout_marginStart="4dp"
+                android:layout_marginEnd="8dp"
+                android:scaleType="fitXY"
+                app:roundHeight="6dp"
+                app:roundWidth="6dp" />
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/blog_author_nickname"
+                    android:layout_width="match_parent"
+                    android:layout_height="18dp"
+                    android:textColor="@color/black"
+                    android:text="nickname"
+                    android:textSize="14sp" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:layout_marginTop="4dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/blog_time"
+                        android:layout_width="0dp"
+                        android:layout_height="16dp"
+                        android:layout_weight="1"
+                        android:maxWidth="200dp"
+                        android:gravity="top"
+                        android:textSize="12sp"
+                        android:textColor="@color/grey"
+                        android:text="time" />
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="24dp"
+                android:layout_height="match_parent">
+
+                <Button
+                    android:id="@+id/blog_outline_more"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_gravity="center_vertical"
+                    android:background="@drawable/ic_keyboard_arrow_down_grey" />
+            </LinearLayout>
+
         </LinearLayout>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:id="@+id/blog_id"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/blog_tag"/>
 
         <TextView
             android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginStart="52dp"
+            android:layout_marginEnd="8dp"
+            android:layerType="software"
+            android:background="@drawable/stroke_line_horizontal" />
+
+        <TextView
+            android:id="@+id/blog_title"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:maxLines="1"
-            android:id="@+id/blog_introduction"/>
+            android:textColor="@color/black"
+            android:text="TITLE"
+            android:textSize="18sp" />
+
         <LinearLayout
-            android:orientation="horizontal"
+            android:layout_marginTop="16dp"
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
-                android:layout_width="wrap_content"
+                android:id="@+id/blog_introduction"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:maxWidth="200dp"
-                android:id="@+id/blog_time"/>
-            <TextView
-                android:id="@+id/blog_comment_count"
-                android:text="comments: 0"
-                android:layout_marginEnd="16dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-            <TextView
-                android:id="@+id/blog_like_count"
-                android:text="likes: 0"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:textColor="@color/grey"
+                android:background="@drawable/border"
+                android:maxLines="5"
+                android:padding="4dp"
+                android:text="introduction: \n\n\n\n ha ha ha"
+                android:textSize="16sp" />
         </LinearLayout>
+
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="24dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="4dp"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="3">
+
+                <ImageView
+                    android:layout_width="28dp"
+                    android:layout_height="28dp"
+                    android:contentDescription="@null"
+                    android:padding="4dp"
+                    android:src="@drawable/ic_tag_grey_64dp" />
+
+                <TextView
+                    android:id="@+id/blog_tag"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginEnd="32dp"
+                    android:ellipsize="end"
+                    android:gravity="center_vertical"
+                    android:maxLines="1"
+                    android:paddingStart="4dp"
+                    android:paddingEnd="4dp"
+                    android:text="Android"
+                    android:textColor="@color/colorNormal" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="3"
+                android:gravity="end"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="28dp"
+                    android:layout_height="28dp"
+                    android:contentDescription="@null"
+                    android:padding="4dp"
+                    android:src="@drawable/ic_like_grey_64dp" />
+
+                <TextView
+                    android:id="@+id/blog_like_count"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:ellipsize="end"
+                    android:gravity="center_vertical"
+                    android:maxEms="5"
+                    android:maxLines="1"
+                    android:paddingStart="12dp"
+                    android:paddingEnd="6dp"
+                    android:text="1520" />
+
+                <ImageView
+                    android:layout_width="28dp"
+                    android:layout_height="28dp"
+                    android:contentDescription="@null"
+                    android:padding="4dp"
+                    android:src="@drawable/ic_comment_grey_64dp" />
+
+                <TextView
+                    android:id="@+id/blog_comment_count"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:ellipsize="end"
+                    android:gravity="center_vertical"
+                    android:maxEms="5"
+                    android:maxLines="1"
+                    android:paddingStart="6dp"
+                    android:paddingEnd="12dp"
+                    android:text="123" />
+            </LinearLayout>
+
+        </LinearLayout>
+
     </LinearLayout>
 
-
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="16dp"
+        android:layout_gravity="bottom"
+        android:background="@color/light_grey" />
 </androidx.cardview.widget.CardView>
