--- a/app/src/main/res/menu/nav_add_blog.xml
+++ b/app/src/main/res/menu/nav_add_blog.xml
@@ -1,21 +1,20 @@
-<menu xmlns:tools="http://schemas.android.com/tools"
-      xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/nav_short"
         android:icon="@drawable/msg"
         android:title="简洁模式"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/nav_complex"
         android:icon="@drawable/ic_pencil_edit"
         android:title="高级模式"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/nav_pro"
         android:icon="@drawable/ic_code_black"
         android:title="Markdown"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom" />
 </menu>
