--- a/app/src/main/res/layout/fragment_create_blog_short.xml
+++ b/app/src/main/res/layout/fragment_create_blog_short.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/border"
-        android:hint="TAG, separated by `|`"
+        android:hint="TAG"
         android:inputType="text"
         android:maxLines="1"
         android:padding="4dp" />
