--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".pages.fragment.HomeFragment">
+    tools:context=".pages.fragment.SearchFragment">
 
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
-        android:id="@+id/home_refreshLayout"
+        android:id="@+id/square_fragment_refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:srlEnablePreviewInEditMode="false">
@@ -15,26 +15,15 @@
         <com.scwang.smartrefresh.header.PhoenixHeader
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/home_tag_tab"
-                android:layout_width="match_parent"
-                android:layout_height="36dp" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/home_blog_list"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
         </LinearLayout>
 
-        <com.scwang.smartrefresh.layout.footer.BallPulseFooter
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+
+
     </com.scwang.smartrefresh.layout.SmartRefreshLayout>
+
 
 </RelativeLayout>
