--- a/app/src/main/res/drawable/border_capsule_28dp.xml
+++ b/app/src/main/res/drawable/border_capsule_28dp.xml
@@ -9,5 +9,5 @@
         android:topRightRadius="14dp" />
     <stroke
         android:width="1dp"
-        android:color="@color/grey" />
+        android:color="@color/gray" />
 </shape>
