--- a/app/src/main/res/drawable/border_light.xml
+++ b/app/src/main/res/drawable/border_light.xml
@@ -9,5 +9,5 @@
         android:topRightRadius="2dp" />
     <stroke
         android:width="1dp"
-        android:color="@color/light_grey" />
+        android:color="@color/light_gray" />
 </shape>
