--- a/app/src/main/res/drawable/ic_chat_gray_64dp.xml
+++ b/app/src/main/res/drawable/ic_chat_gray_64dp.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="1024"
     android:viewportHeight="1024">
     <path
-        android:fillColor="@color/grey"
+        android:fillColor="@color/gray"
         android:pathData="M85.33,955.73a17.07,17.07 0,0 1,-17.07 -17.07L68.27,170.67c0,-66.03 36.37,-102.4 102.4,-102.4h682.67c66.03,0 102.4,36.37 102.4,102.4v512c0,66.03 -36.37,102.4 -102.4,102.4L263.07,785.07l-165.67,165.67A17.07,17.07 0,0 1,85.33 955.73zM170.67,102.4c-47.22,0 -68.27,21.04 -68.27,68.27v726.8l141.53,-141.53A17.02,17.02 0,0 1,256 750.93h597.33c47.22,0 68.27,-21.04 68.27,-68.27L921.6,170.67c0,-47.22 -21.04,-68.27 -68.27,-68.27L170.67,102.4z" />
 </vector>
