--- a/app/src/main/res/drawable/stroke_line_horizontal.xml
+++ b/app/src/main/res/drawable/stroke_line_horizontal.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="line">
-    <solid android:color="@color/light_grey" />
+    <solid android:color="@color/light_gray" />
     <stroke
         android:width="1dp"
-        android:color="@color/light_grey"
+        android:color="@color/light_gray"
         android:dashWidth="3dp"
         android:dashGap="2dp" />
 </shape>
