--- a/app/src/main/res/layout/activity_change_info.xml
+++ b/app/src/main/res/layout/activity_change_info.xml
@@ -1,8 +1,229 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
+    android:orientation="vertical"
     tools:context=".pages.activity.ChangeInfoActivity">
+    
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="48dp">
+            
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="8dp"
+                android:text="修改个人信息"
+                android:textColor="@color/white"
+                android:textSize="28sp" />
+            
+            <Button
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="8dp"
+                android:background="@drawable/ic_check_white_128dp" />
+        
+        </RelativeLayout>
+    </com.google.android.material.appbar.AppBarLayout>
+    
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scrollbars="vertical">
+        
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            
+            <tty.community.widget.RoundAngleImageView
+                android:id="@+id/change_info_portrait"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginStart="48dp"
+                android:layout_marginTop="48dp"
+                android:layout_marginEnd="48dp"
+                android:layout_marginBottom="48dp"
+                android:background="@color/white"
+                android:src="@drawable/ic_user_gray_64dp"
+                app:roundHeight="40dp"
+                app:roundWidth="40dp" />
+            
+            <LinearLayout
+                android:id="@+id/layout_nickname"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:orientation="horizontal"
+                android:padding="8dp">
+                
+                <TextView
+                    android:layout_width="80dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/light_gray"
+                    android:gravity="center"
+                    android:labelFor="@id/change_info_nickname"
+                    android:text="昵称"
+                    android:textSize="24sp" />
+                
+                <EditText
+                    android:id="@+id/change_info_nickname"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:background="@color/vary_light_gray"
+                    android:ellipsize="end"
+                    android:gravity="end"
+                    android:importantForAutofill="no"
+                    android:inputType="text"
+                    android:maxLines="1"
+                    android:selectAllOnFocus="true"
+                    android:textSize="24sp" />
+            </LinearLayout>
+            
+            <TextView
+                android:id="@+id/change_info_nickname_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:textSize="18sp"
+                android:visibility="gone" />
+            
+            <LinearLayout
+                android:id="@+id/layout_email"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:orientation="horizontal"
+                android:padding="8dp">
+                
+                <TextView
+                    android:layout_width="80dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/light_gray"
+                    android:gravity="center"
+                    android:labelFor="@id/change_info_email"
+                    android:text="邮箱"
+                    android:textSize="24sp" />
+                
+                <EditText
+                    android:id="@+id/change_info_email"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:background="@color/vary_light_gray"
+                    android:ellipsize="end"
+                    android:gravity="end"
+                    android:importantForAutofill="no"
+                    android:inputType="textEmailAddress"
+                    android:maxLines="1"
+                    android:selectAllOnFocus="true"
+                    android:textSize="24sp" />
+            </LinearLayout>
+            
+            <TextView
+                android:id="@+id/change_info_email_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:textSize="18sp"
+                android:visibility="gone" />
+            
+            <LinearLayout
+                android:id="@+id/layout_school"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:orientation="horizontal"
+                android:padding="8dp">
+                
+                <TextView
+                    android:layout_width="80dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/light_gray"
+                    android:gravity="center"
+                    android:labelFor="@id/change_info_school"
+                    android:text="学校"
+                    android:textSize="24sp" />
+                
+                <EditText
+                    android:id="@+id/change_info_school"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:background="@color/vary_light_gray"
+                    android:ellipsize="end"
+                    android:gravity="end"
+                    android:importantForAutofill="no"
+                    android:inputType="text"
+                    android:selectAllOnFocus="true"
+                    android:textSize="24sp" />
+            </LinearLayout>
+            
+            <TextView
+                android:id="@+id/change_info_school_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:textSize="18sp"
+                android:visibility="gone" />
+            
+            <LinearLayout
+                android:id="@+id/layout_signature"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:orientation="horizontal"
+                android:padding="8dp">
+                
+                <TextView
+                    android:layout_width="80dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/light_gray"
+                    android:gravity="center"
+                    android:labelFor="@id/change_info_signature"
+                    android:text="签名"
+                    android:textSize="24sp" />
+                
+                <EditText
+                    android:id="@+id/change_info_signature"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:background="@color/vary_light_gray"
+                    android:ellipsize="end"
+                    android:gravity="end"
+                    android:importantForAutofill="no"
+                    android:inputType="text"
+                    android:selectAllOnFocus="true"
+                    android:textSize="24sp" />
+            </LinearLayout>
+            
+            <TextView
+                android:id="@+id/change_info_signature_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:textSize="18sp"
+                android:visibility="gone" />
+        </LinearLayout>
+    </ScrollView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</LinearLayout>
