--- a/app/src/main/res/layout/item_blog_outline.xml
+++ b/app/src/main/res/layout/item_blog_outline.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:background="@color/vary_light_grey"
+        android:background="@color/vary_light_gray"
         android:orientation="vertical"
         android:padding="4dp">
 
@@ -62,7 +62,7 @@
                         android:gravity="top"
                         android:maxWidth="200dp"
                         android:text="time"
-                        android:textColor="@color/grey"
+                        android:textColor="@color/gray"
                         android:textSize="12sp" />
                 </LinearLayout>
 
@@ -77,7 +77,7 @@
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:layout_gravity="center_vertical"
-                    android:background="@drawable/ic_keyboard_arrow_down_grey" />
+                    android:background="@drawable/ic_keyboard_arrow_down_gray" />
             </LinearLayout>
 
         </LinearLayout>
@@ -115,11 +115,11 @@
                 android:maxLines="5"
                 android:padding="4dp"
                 android:text="introduction: \n\n\n\nha ha ha"
-                android:textColor="@color/grey"
+                android:textColor="@color/gray"
                 android:textSize="16sp" />
             <tty.community.widget.RoundAngleImageView
                 android:id="@+id/blog_picture"
-                app:srcCompat="@drawable/ic_broken_image_grey"
+                app:srcCompat="@drawable/ic_broken_image_gray"
                 android:scaleType="fitCenter"
                 android:visibility="gone"
                 android:padding="4dp"
@@ -145,7 +145,7 @@
                     android:layout_height="24dp"
                     android:contentDescription="@null"
                     android:padding="4dp"
-                    android:src="@drawable/ic_tag_grey_64dp" />
+                    android:src="@drawable/ic_tag_gray_64dp" />
 
                 <TextView
                     android:id="@+id/blog_tag"
@@ -173,7 +173,7 @@
                     android:layout_height="24dp"
                     android:contentDescription="@null"
                     android:padding="4dp"
-                    android:src="@drawable/ic_like_grey_64dp" />
+                    android:src="@drawable/ic_like_gray_64dp" />
 
                 <TextView
                     android:id="@+id/blog_like_count"
@@ -192,7 +192,7 @@
                     android:layout_height="24dp"
                     android:contentDescription="@null"
                     android:padding="4dp"
-                    android:src="@drawable/ic_comment_grey_64dp" />
+                    android:src="@drawable/ic_comment_gray_64dp" />
 
                 <TextView
                     android:id="@+id/blog_comment_count"
@@ -215,5 +215,5 @@
         android:layout_width="match_parent"
         android:layout_height="8dp"
         android:layout_gravity="bottom"
-        android:background="@color/light_grey" />
+        android:background="@color/light_gray" />
 </androidx.cardview.widget.CardView>
