--- a/app/src/main/res/layout/item_pic.xml
+++ b/app/src/main/res/layout/item_pic.xml
@@ -9,6 +9,6 @@
         android:layout_height="80dp"
         android:layout_margin="8dp"
         android:background="@drawable/border"
-        android:src="@drawable/ic_add_grey" />
+        android:src="@drawable/ic_add_gray" />
 
 </LinearLayout>
