--- a/app/src/main/res/layout/activity_change_info.xml
+++ b/app/src/main/res/layout/activity_change_info.xml
@@ -31,7 +31,8 @@
                 android:layout_height="24dp"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_marginEnd="8dp"
+                android:layout_marginEnd="16dp"
+                android:id="@+id/change_info_submit"
                 android:background="@drawable/ic_check_white_128dp" />
         
         </RelativeLayout>
