--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -31,7 +31,7 @@
 
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="48dp">
 
                     <tty.community.widget.RoundAngleImageView
                         android:id="@+id/user_portrait"
@@ -51,7 +51,7 @@
                     <TextView
                         android:id="@+id/user_nickname"
                         android:layout_width="wrap_content"
-                        android:maxWidth="144dp"
+                        android:layout_toStartOf="@id/user_qr_code"
                         android:layout_height="24dp"
                         android:layout_toEndOf="@id/user_portrait"
                         android:ellipsize="end"
@@ -64,8 +64,8 @@
                     <TextView
                         android:id="@+id/user_id"
                         android:layout_toEndOf="@id/user_portrait"
-                        android:layout_below="@id/user_nickname"
-                        android:maxWidth="144dp"
+                        android:layout_alignParentBottom="true"
+                        android:layout_toStartOf="@id/user_qr_code"
                         android:layout_width="wrap_content"
                         android:layout_height="24dp"
                         android:layout_gravity="center_vertical"
@@ -97,11 +97,55 @@
 
                 </RelativeLayout>
 
+
+                <RelativeLayout
+                    android:layout_marginTop="8dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp">
+                    <ImageView
+                        android:id="@+id/user_icon_school"
+                        android:src="@drawable/ic_school_white_128dp"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_marginStart="16dp"
+                        android:contentDescription="@null" />
+
+                    <TextView
+                        android:id="@+id/user_school"
+                        android:layout_width="wrap_content"
+                        android:layout_height="24dp"
+                        android:layout_marginStart="16dp"
+                        android:ellipsize="end"
+                        android:layout_toEndOf="@id/user_icon_school"
+                        android:layout_alignParentEnd="true"
+                        android:maxLines="1" />
+                    <ImageView
+                        android:id="@+id/user_icon_signature"
+                        android:src="@drawable/ic_signature_white_128dp"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_marginStart="16dp"
+                        android:layout_alignParentBottom="true"
+                        android:contentDescription="@null" />
+
+                    <TextView
+                        android:id="@+id/user_signature"
+                        android:layout_width="wrap_content"
+                        android:layout_height="24dp"
+                        android:layout_marginStart="16dp"
+                        android:ellipsize="end"
+                        android:layout_toEndOf="@id/user_icon_signature"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentBottom="true"
+                        android:maxLines="1" />
+
+                </RelativeLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
                     android:background="@drawable/border"
@@ -190,8 +234,8 @@
                             android:textSize="14sp" />
                     </LinearLayout>
                 </LinearLayout>
-
             </LinearLayout>
+
 
             <RelativeLayout
                 android:id="@+id/user_outline_nothing"
