--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="gray">#bbbbbb</color>
     <color name="light_gray">#eeeeee</color>
     <color name="vary_light_gray">#f8f8f8</color>
+    <color name="blue_transparent">#994FC3F7</color>
 </resources>
